--- a/lesson-19 - customization/main/scss/main.scss
+++ b/lesson-19 - customization/main/scss/main.scss
@@ -1,19 +1,27 @@
-// custom variable values
-$primary: #c29938;
-$light: #fbf5e5;
+// custom variable values--
 
-// import the functions & variables
-@import "../node_modules/bootstrap/scss/_functions";
-@import "../node_modules/bootstrap/scss/_variables";
+// $primary: #c29938;
 
-// custom theme colours
-$custom-theme-colors: (
-  "altlight": #f2ebfa,
-  "altdark": #522192
-);
+// $light: #fbf5e5;
 
-// merge the maps to add new theme colors
-$theme-colors: map-merge($custom-theme-colors, $theme-colors);
+// import the functions & variables--
 
-// import bootstrap
-@import '../node_modules/bootstrap/scss/bootstrap';
+// @import "../../../node_modules/bootstrap/scss/functions";
+// @import "../../../node_modules/bootstrap/scss/_variables";
+
+// custom theme colours--
+
+// $custom-theme-colors: (
+//   "altlight": #f2ebfa,
+//   "altdark": #522192,
+//   );
+ 
+
+// merge the maps to add new theme colors--
+
+// $theme-colors: map-merge($custom-theme-colors, $theme-colors);
+
+// import bootstrap--
+
+// @import '../../../node_modules/bootstrap/scss/bootstrap';
+
