--- a/lesson-19 - customization/sass/main.scss
+++ b/lesson-19 - customization/sass/main.scss
@@ -19,3 +19,7 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
 // import bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap';
+
+.mg-comments {
+  margin-bottom: 1rem;
+}
