--- a/lesson-19 - customization/sass/main.css
+++ b/lesson-19 - customization/sass/main.css
@@ -1,3 +1,9 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  background-color: #fbf5e5;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -12189,26 +12195,16 @@ fieldset:disabled .btn {
   margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 280px) and (max-width: 374px) {
-  body {
-    margin-left: 3%;
-  }
-  .nav-bar-e {
-    max-width: 80%;
-    font-size: 1.1rem;
-    margin-right: 1%;
-  }
-  .nav-border {
-    border-color: #e0080800 !important;
-    padding: 0% !important;
-    margin-left: auto !important;
-  }
+.nav-bar-e {
+  max-width: 80%;
+  font-size: 1.1rem;
+  margin-right: 1%;
 }
 
-@media screen and (min-width: 375px) and (max-width: 429px) {
-  body {
-    margin-left: 3%;
-  }
+.nav-border {
+  border-color: #e0080800 !important;
+  padding: 0% !important;
+  margin-left: auto !important;
 }
 
 @media screen and (min-width: 430px) and (max-width: 767px) {
