--- a/lesson-19 - customization/sass/main.css
+++ b/lesson-19 - customization/sass/main.css
@@ -12212,4 +12212,8 @@ fieldset:disabled .btn {
     margin-left: 2%;
   }
 }
+
+.bg-header-main {
+  background-color: #e4c274c8;
+}
 /*# sourceMappingURL=main.css.map */
