--- a/lesson-19 - customization/sass/main.css
+++ b/lesson-19 - customization/sass/main.css
@@ -12230,4 +12230,8 @@ a.navbar-brand.nav-bar-e {
 div.container-xxl > div > ul > li > a:hover {
   text-decoration: underline;
 }
+
+.btn-light:hover {
+  background-color: #c29938;
+}
 /*# sourceMappingURL=main.css.map */
